--- a/src/pages/App.scss
+++ b/src/pages/App.scss
@@ -1,9 +1,10 @@
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&display=swap");
 html,
 body {
   height: 100%;
   // width: 100vw;
   margin: 0;
-  font-family: "campton";
+  font-family: "Montserrat", sans-serif;
   font-size: 1rem;
   // overflow: hidden;
   // z-index: -5;
